--- a/src/style/sass/style.scss
+++ b/src/style/sass/style.scss
@@ -20,7 +20,8 @@ html, body {
 }
 
 #app,
-.site-pusher {
+.site-pusher,
+.container-fluid {
   height: 100%;
 }
 
